# rust-impl-template

./: .gitignore  Cargo.toml  README.md
src/: as_types.rs  contains_placeholder.rs  extract_path.rs  find_patterns.rs  find_types.rs  lib.rs  render.rs  render_with_type.rs
tests/: emits-impl-block-for-each-in-self-position.rs  macro-exists.rs  no-pattern-found.rs  reuse-type.rs  self-position.rs  three-patterns.rs  trybuild-tests.rs  two-patterns.rs  types-with-paths.rs  use-in-generics.rs
