[package]
name = "impl-template"
version = "1.0.0"
authors = ["Thomas Eizinger <thomas@eizinger.io>"]
autotests = false
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/trybuild-tests.rs"

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0.2"

[dev-dependencies]
trybuild = "1.0"
